--- a/index.html
+++ b/index.html
@@ -243,17 +243,17 @@
                  <div class="footer-left">
                      <p>Telegram</p>
                      <a href="">
-                         <img src="" alt="Telegram"> <!-- Replace with your Telegram image path -->
+                         <img src="" alt="Telegram"> 
                      </a>
                      <div class="footer-vk">
                          <p>Вконтакте</p>
                          <a href="https://vk.com/idrayden5478">
-                             <img src="" alt="Вконтакте"> <!-- Replace with your VK image path -->
+                             <img src="" alt="Вконтакте"> 
                          </a>
                      </div>
                  </div>
                  <div class="footer-center">
-                     <p>Служба поддержки<br>8 980 555 35 35</p>
+                     <p>Служба поддержки<br> +7 916 029 1629</p>
                       <p>Местоположение магазинов</p>
                  </div>
                  <div class="footer-right">
